--- a/src/main/resources/order.cfg
+++ b/src/main/resources/order.cfg
@@ -1,13 +1,13 @@
 [default]
 FileStorePath=target/data/fix
 ConnectionType=acceptor
+TimeZone=Asia/Tokyo
 StartTime=00:00:00
 EndTime=00:00:00
-HeartBtInt=30
+HeartBtInt=60
 ValidOrderTypes=1,2,F
 SenderCompID=OANDA_OD
 TargetCompID=YAMATO373
-UseDataDictionary=Y
 DefaultMarketPrice=12.30
 
 ResetOnLogon=Y
